--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" href="js/lib/jquery-ui/css/smoothness/jquery-ui-1.9.1.custom.css" />
 <link rel="stylesheet" href="js/lib/jquery-ui/addons/jquery-ui-timepicker.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css" />
 <link rel="stylesheet" href="js/otp/widgets/widget-style.css?v=1" />
 <link rel="stylesheet" href="js/otp/modules/planner/planner-style.css?v=1" />
 <link rel="stylesheet" href="js/otp/modules/bikeshare/bikeshare-style.css?v=1" />
@@ -26,8 +26,13 @@
 <!--Loads jquery, underscore, json2, momentjs and raphael makes 7 requests less-->
 <script src="//cdn.jsdelivr.net/g/jquery@1.9.1,underscorejs@1.4.2,json2@0.1,momentjs@1.7.2,raphael@2.1.2"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/leaflet-vector-tile-layer@0.8.0/dist/VectorTileLayer.umd.min.js"></script>
+<!-- Maplibre GL -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/maplibre-gl@2.4.0/dist/maplibre-gl.css" integrity="sha256-XSFr7LOcuEhLTCjxEDKGYWrybnxvmEbq1vVebzaOdGQ=" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/maplibre-gl@2.4.0/dist/maplibre-gl.js" integrity="sha256-+w4eOjx0PG0PkY759djLZBB4sF2VoKuyJfsQ67pUGYk=" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@maplibre/maplibre-gl-leaflet@0.0.19/leaflet-maplibre-gl.js" integrity="sha256-5s4a6MMXXcj6jH8/3CqpenfBak8YckMSLA0i9p7ZPaA=" crossorigin="anonymous"></script>
 
 <!-- jquery-ui -->
 <script src="js/lib/jquery-ui/js/jquery-ui-1.9.1.custom.min.js"></script>
